Fix image situation, stop using a third party host
@brigazvi's commit piggybacked off of Unsplash without me noticing

--- a/css/fonts.css
+++ b/css/fonts.css
@@ -3,9 +3,9 @@
   font-style: normal;
   font-display: swap;
   src:
-  url('../blob/fonts/vf/RobotoMono[wght].woff2') format('woff2'),
-  url('../blob/fonts/vf/RobotoMono[wght].woff') format('woff'),
-  url('../blob/fonts/vf/RobotoMono[wght].ttf') format('ttf');
+  url('/blob/fonts/vf/RobotoMono%5Bwght%5D.woff2') format('woff2'),
+  url('/blob/fonts/vf/RobotoMono%5Bwght%5D.woff') format('woff'),
+  url('/blob/fonts/vf/RobotoMono%5Bwght%5D.ttf') format('ttf');
 }
 
 @font-face {
@@ -15,9 +15,9 @@
   font-variation-settings: 'opsz' 12;
   font-stretch: condensed;
   src:
-  url('../blob/fonts/vf/RobotoSerif[GRAD,opsz,wdth,wght].woff2') format('woff2'),
-  url('../blob/fonts/vf/RobotoSerif[GRAD,opsz,wdth,wght].ttf') format('ttf'),
-  url('../blob/fonts/vf/RobotoSerif[GRAD,opsz,wdth,wght].woff') format('woff');
+  url('/blob/fonts/vf/RobotoSerif%5BGRAD,opsz,wdth,wght%5D.woff2') format('woff2'),
+  url('/blob/fonts/vf/RobotoSerif%5BGRAD,opsz,wdth,wght%5D.ttf') format('ttf'),
+  url('/blob/fonts/vf/RobotoSerif%5BGRAD,opsz,wdth,wght%5D.woff') format('woff');
 }
 
 @font-face {
@@ -27,7 +27,7 @@
   font-variation-settings: 'opsz' 12;
   font-stretch: condensed;
   src: 
-  url('../blob/fonts/vf/RobotoSerif-Italic[GRAD,opsz,wdth,wght].woff2') format('woff2'),
-  url('../blob/fonts/vf/RobotoSerif-Italic[GRAD,opsz,wdth,wght].woff') format('woff'),
-  url('../blob/fonts/vf/RobotoSerif-Italic[GRAD,opsz,wdth,wght].ttf') format('ttf');
+  url('/blob/fonts/vf/RobotoSerif-Italic%5BGRAD,opsz,wdth,wght%5D.woff2') format('woff2'),
+  url('/blob/fonts/vf/RobotoSerif-Italic%5BGRAD,opsz,wdth,wght%5D.woff') format('woff'),
+  url('/blob/fonts/vf/RobotoSerif-Italic%5BGRAD,opsz,wdth,wght%5D.ttf') format('ttf');
 }
