Remove and replace github-last-modified-at
Includes code by @ryanfb.
Includes verbatim library by @JakeChampion and others (github/fetch).

Cf. https://ryanfb.github.io/etc/2020/04/27/last_modified_dates_for_github_pages_jekyll_posts.html

Code will soon be uploaded at <https://github.com/MFEK/github-jekyll-last-modified.js>.

Co-Authored-By: Ryan Baumann <ryan.baumann@gmail.com>
Co-Authored-By: Jake Champion <me@jakechampion.name>

--- a/_layouts/default_foundation.html
+++ b/_layouts/default_foundation.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>{%- if page.title -%}{{page.title}} | {%- endif -%}{{site.title}}</title>
-        {% include foundation_head.html %}
-    </head>
-    <body>
-        {{content}}
+  <head>
+    <title>{%- if page.title -%}{{page.title}} | {%- endif -%}{{site.title}}</title>
+    {% include foundation_head.html %}
+  </head>
+  <body>
+    {{content}}
     <div style="height:500px"></div>
     {%- if page.no_fred == null -%}
-    {% include footer_fred.html %}
+      {% include footer_fred.html %}
     {%- endif -%}
     {%- if page.no_lup == null -%}
-    <footer id="lup">
-        <p>Last updated: {{page.last_modified_at}}</p>
-    </footer>
+      <footer id="lup">
+        <p>Last updated: <span id="last-modified"></span></p>
+      </footer>
     {%- endif -%}
-    </body>
+    {% include github-jekyll-last-modified.html site=site page=page %}
+  </body>
 </html>
