[footer.html] Add pocketfurry credit

--- a/_includes/footer_fred.html
+++ b/_includes/footer_fred.html
@@ -2,4 +2,5 @@
     <div id="fred" style="width:150px;height:212px">
     </div>
     <p><em>Among the vital work our Foundation does for the free software community is making sure this green raccoon in particular never gets his money back</em></p>
+    <p>Art by @<a href="https://twitter.com/PocketFurry">PocketFurry</a></p>
 </footer>
