--- a/_includes/foundation_head.html
+++ b/_includes/foundation_head.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/foundation/css/fonts.css">
+<link rel="stylesheet" href="/css/fonts.css">
 <link rel="stylesheet" href="/foundation/css/default.css">
 {%- if page.layout != "default_foundation" and page.layout != "default" -%}
 <link rel="stylesheet" href="/foundation/css/{{page.layout}}.css">
