Add CSS :has JS shim for Firefox

--- a/_includes/github-jekyll-last-modified.html
+++ b/_includes/github-jekyll-last-modified.html
@@ -8,6 +8,7 @@
   window.GitHubJekyllLastModifiedEl = document.getElementById("last-modified");
 </script>
 <script type="text/javascript" src="/blob/js/github-jekyll-last-modified.js"></script>
+<script type="text/javascript" src="/blob/js/has-shim.js"></script>
 <script type="text/javascript">
   modifiedDateJekyllGitHubAPI();
 </script>
