--- a/_layouts/default_foundation.html
+++ b/_layouts/default_foundation.html
@@ -18,5 +18,6 @@
       </footer>
     {%- endif -%}
     {% include github-jekyll-last-modified.html site=site page=page %}
+    {% include has-shim.html %}
   </body>
 </html>
