--- a/_includes/footer_fred.html
+++ b/_includes/footer_fred.html
@@ -1,6 +1,7 @@
-<footer id="fredf">
-    <div id="fred" style="width:150px;height:212px">
-    </div>
-    <p><em>Among the vital work our Foundation does for the free software community is making sure this green raccoon in particular never gets his money back</em></p>
-    <p>Art by @<a href="https://twitter.com/PocketFurry">PocketFurry</a></p>
-</footer>
+<FOOTER ID="fredf">
+<DIV CLASS="fred"><IMG CLASS="fred" SRCSET="./media/fred💸.avif, ./media/fred💸.gif"/></DIV>
+    <P>
+      <SPAN CLASS="冗談"><EM>Among the vital work our Foundation does for the free software community is making sure this green raccoon in particular never gets his money back</EM>
+      <SPAN CLASS="artcredit">Art by @<A HREF="https://twitter.com/maaudaan_tg">maaudaan</A></SPAN></SPAN>
+    </P>
+</FOOTER>
