--- a/_includes/foundation_index.html
+++ b/_includes/foundation_index.html
@@ -13,7 +13,7 @@ ignored.</P>
 <P>If a grant’s index is preceded by <SPAN CLASS="tag-sc">modifier letter small b</SPAN>, U+1D47 <SPAN CLASS="tag-char">ᵇ</SPAN>, it means that the grant was awarded via bounty, not traditional bid/counterbid negotiation.</P>
 <H2>Series of 2021 (pre-Foundation)</H2>
 <OL CLASS="grants 2021">
-  <LI>MFEKstroke (<EM><A HREF="https://github.com/MFEK/stroke">completed</A></EM>)<BR>
+  <LI ID="№1">MFEKstroke (<EM><A HREF="https://github.com/MFEK/stroke">completed</A></EM>)<BR>
   Awardee: Matthew Blanchard</LI>
 </OL>
 <DIV CLASS="series-end">
@@ -22,25 +22,25 @@ ignored.</P>
 <H2>Series of 2022</H2>
 <OL CLASS="grants 2022 spaced_out">
   <SPAN CLASS="tag-bounty"></SPAN><DIV CLASS="tag-marker"></DIV>
-  <LI><SPAN>CUDA Vanity Monero Address Generator (<EM><A HREF="https://github.com/SChernykh/vanity_xmr_cuda">completed</A></EM>)</SPAN><BR>
+  <LI ID="№2"><SPAN>CUDA Vanity Monero Address Generator (<EM><A HREF="https://github.com/SChernykh/vanity_xmr_cuda">completed</A></EM>)</SPAN><BR>
   <SPAN>Awardee: Sergey Chernykh (Сергей Черных) / @sech1 (Libera IRC)</SPAN></LI>
   <DIV CLASS="tag-marker"></DIV>
-  <LI><SPAN>MFEK Serif Font (<EM><A HREF="https://github.com/indestructible-type/Besley/commit/c87ddc8b1d852033865cb52680b6bddb3da1b943">completed</A></EM>)</SPAN><BR>
+  <LI ID="№3"><SPAN>MFEK Serif Font (<EM><A HREF="https://github.com/indestructible-type/Besley/commit/c87ddc8b1d852033865cb52680b6bddb3da1b943">completed</A></EM>)</SPAN><BR>
   <SPAN>Awardee: Indestructible Type LLC</SPAN></LI>
   <DIV CLASS="tag-marker"></DIV>
-  <LI>macOS Code Signing (<EM>withdrawn after payment</EM>)<BR>
+  <LI ID="№4">macOS Code Signing (<EM>withdrawn after payment</EM>)<BR>
     Former awardee: Seth Erfurt / @Subject38 (GitHub)<BR>
     <P CLASS="extended-comment"><SMALL>Apple makes code signing too difficult. Spending the Foundation's money on a macOS developer key is both unfeasible and immoral. The number of hoops to jump through proved insurmountable. If a user wishes to
     sign MFEK's binaries, similar to how the FFmpeg project deals with Apple, they are free to, but there are no current plans to reinstate this grant.</SMALL></P>
   </LI>
   <DIV CLASS="tag-marker"></DIV>
-  <LI>
+  <LI ID="№5">
     <S>libspiro port</S> (<EM>revoked</EM>)<BR>
     <P CLASS="extended-comment"><SMALL>This became <A HREF="https://github.com/MFEK/spiro.rlib">MFEK/spiro.rlib</A>. Due to the determination that MFEK Foun­dation Grant № 2, Series of 2022 could not move forward, Seth Erfurt contributed a very
     useful patch to this which helped get it out of limbo and into production. So we consider the payment rendered originally for № 2–2022 to actually apply to № 3–2022, meaning the Foundation is not out any money.</SMALL></P>
   </LI>
   <DIV CLASS="tag-marker"></DIV>
-  <LI>Bézier Simplification for MFEKpathops (<EM><A HREF="https://github.com/MFEK/kurbo.rlib/pull/1">completed</A></EM>)<BR>
+  <LI ID="№6">Bézier Simplification for MFEKpathops (<EM><A HREF="https://github.com/MFEK/kurbo.rlib/pull/1">completed</A></EM>)<BR>
     Honorary awardee<SPAN CLASS="tag-dagger"></SPAN>: Raph Linus Levien PhD
     <P CLASS="extended-comment"><SMALL><SPAN CLASS="tag-dagger"></SPAN>Levien did his work neither for us nor to satisfy any terms of any of our grants, and perhaps did not know of the existence of a relevant grant in the problem domain he was
     working on. His work just happened to be <EM>exactly</EM> what we had been requesting. Offered the face value of the grant via e-mail, he declined graciously.</SMALL></P>
@@ -50,18 +50,18 @@ ignored.</P>
     <A HREF="https://github.com/sile-typesetter/sile/issues/1182#issuecomment-1105859541">SILE Variable Fonts Support</A><SPAN CLASS="tag-bux">($5,000)</SPAN> (<EM><ABBR TITLE="Offered 2022-04-21.">completed</ABBR></EM>)<BR>
     <SPAN>Awardee: Khaled Hosny<SPAN CLASS="tag-dagger"></SPAN></SPAN>
     <UL CLASS="grant-notes">
-      <LI><SPAN CLASS="tag-dagger"></SPAN><SPAN>Merger did not take place in 2022 but the Foundation considers the bounty complete and has paid out.</SPAN></LI>
+      <LI ID="№7"><SPAN CLASS="tag-dagger"></SPAN><SPAN>Merger did not take place in 2022 but the Foundation considers the bounty complete and has paid out.</SPAN></LI>
     </UL>
   </LI>
   <DIV CLASS="tag-marker"></DIV>
-  <LI><S>Visual TrueType Rewrite</S> (<EM>withdrawn</EM>; see <EM><A HREF="{%link _posts/foundation/2022-04-22-visual-truetype-rewrite.markdown%}">archived bid invite</A></EM>)</LI>
+  <LI ID="№8"><S>Visual TrueType Rewrite</S> (<EM>withdrawn</EM>; see <EM><A HREF="{%link _posts/foundation/2022-04-22-visual-truetype-rewrite.markdown%}">archived bid invite</A></EM>)</LI>
   <SPAN CLASS="tag-bounty"></SPAN> <DIV CLASS="tag-marker"></DIV>
-  <LI>
+  <LI ID="№9">
     <A HREF="https://github.com/sile-typesetter/sile/issues/1265#issuecomment-1108457196">SILE OpenType FeatureVariations Support</A><SPAN CLASS="tag-bux">($350)</SPAN> (<EM><ABBR TITLE="Offered 2022-04-25.">completed</ABBR></EM>)<BR>
     <SPAN>Awardee: Khaled Hosny</SPAN>
   </LI>
   <DIV CLASS="tag-marker"></DIV>
-  <LI>
+  <LI ID="№10">
     <SPAN>MFEKglif Additional Pens API (<EM>completed</EM>)</SPAN><BR>
     <SPAN>Awardee: Matthew Blanchard</SPAN>
     <P CLASS="extended-comment"><SMALL>This work was PR'd to the relevant MFEK repositories in 2022 but not merged into <TT>v2</TT> until January 2023 and will not be merged into <TT>master</TT> by mutual consent until some time in
@@ -70,28 +70,28 @@ ignored.</P>
     </SMALL></P>
   </LI>
   <DIV CLASS="tag-marker"></DIV>
-  <LI><SPAN>Upkeep of the Fediverse instance <A HREF="https://howlr.me">howlr.me</A> (<EM>completed</EM>)</SPAN><BR>
+  <LI ID="№11"><SPAN>Upkeep of the Fediverse instance <A HREF="https://howlr.me">howlr.me</A> (<EM>completed</EM>)</SPAN><BR>
   <SPAN>Awardee: Lycanthropy LLC</SPAN></LI>
   <DIV CLASS="tag-marker"></DIV>
-  <LI><SPAN>MFEK Serif Greek Expansion (<EM>completed</EM>)</SPAN><BR>
+  <LI ID="№12"><SPAN>MFEK Serif Greek Expansion (<EM>completed</EM>)</SPAN><BR>
   <SPAN>Awardee: Indestructible Type LLC</SPAN></LI>
   <DIV CLASS="tag-marker"></DIV>
-  <LI>
+  <LI ID="№13">
     <SPAN><A HREF="https://github.com/lucasmerlin/egui_skia"><CODE>egui_skia.rlib</CODE></A> v1.0 (SDL2, OpenGL, Vulkan<SPAN CLASS="tag-dagger"></SPAN>) (<EM>completed</EM>)</SPAN><BR>
     <SPAN>Awardee: Lucas Meurer</SPAN>
     <UL CLASS="grant-notes">
-      <LI><SPAN CLASS="tag-dagger"></SPAN><SPAN>Stretch goal (<EM>completed</EM>).</SPAN></LI>
+      <LI ID="№14"><SPAN CLASS="tag-dagger"></SPAN><SPAN>Stretch goal (<EM>completed</EM>).</SPAN></LI>
     </UL>
   </LI>
   <DIV CLASS="tag-marker"></DIV>
-  <LI>
+  <LI ID="№15">
     <S><SPAN>System administration work: <A HREF="https://mfek.jitsi.org">Jitsi Meet instance</A>; Mastodon←→Twitter bridge (<EM>in progress</EM>)</SPAN><BR>
     <SPAN>Awardee: Cleveland Digital Self Defense Collective</SPAN></S>
     <P CLASS="extended-comment"><SMALL>Due to an executive error, this grant was listed <EM>prematurely</EM>. It may be awarded in 2023, but was never paid out and circumstances of Naia Ōkami / at Howlr made awarding it in 2022 impossible.
     Nonwithstanding the foregoing, the MFEK Foundation Inc. owes CDSDC <EM>something</EM>, so barring Armageddon they will receive some grant in 2023 if they still want one.</SMALL></P>
   </LI>
   <DIV CLASS="tag-marker"></DIV>
-  <LI><SPAN><A HREF="/misc/four-freedoms.html">The Four Freedoms of Free Software</A> artwork (<EM>completed</EM>)</SPAN><BR>
+  <LI ID="№16"><SPAN><A HREF="/misc/four-freedoms.html">The Four Freedoms of Free Software</A> artwork (<EM>completed</EM>)</SPAN><BR>
   <SPAN>Awardee: LAV (@<A HREF="https://twitter.com/lilblucat">lilblucat</A>)</SPAN></LI>
 </OL>
 <DIV CLASS="series-end">
@@ -100,20 +100,20 @@ ignored.</P>
 <H2>Series of 2023</H2>
 <OL CLASS="grants 2023 spaced_out">
   <DIV CLASS="tag-marker"></DIV>
-  <LI>MFEKglif <TT>egui</TT> port from Dear ImGui (<EM>completed</EM>)<BR>
+  <LI ID="№17">MFEKglif <TT>egui</TT> port from Dear ImGui (<EM>completed</EM>)<BR>
   Awardee: Matthew Blanchard</LI>
   <DIV CLASS="tag-marker"></DIV>
-  <LI>New pattern-along-path algorithm for MFEKstroke (<EM>completed</EM>)
+  <LI ID="№18">New pattern-along-path algorithm for MFEKstroke (<EM>completed</EM>)
       <BR>&amp; changes to math.rlib, MFEKstroke and MFEKglif to support this
       <BR>Awardee: Matthew Blanchard</LI>
   <DIV CLASS="tag-marker"></DIV>
-  <LI>Flatpaks for MFEK projects (<EM>in progress</EM>)<BR>
+  <LI ID="№19">Flatpaks for MFEK projects (<EM>in progress</EM>)<BR>
       Awardee: Seth Erfurt</LI>
   <DIV CLASS="tag-marker"></DIV>
-  <LI>MFEK Sans font family v1.0 (<EM>completed</EM>)<BR>
+  <LI ID="№20">MFEK Sans font family v1.0 (<EM>completed</EM>)<BR>
       Awardee: Indestructible Type LLC</LI>
   <DIV CLASS="tag-marker"></DIV>
-  <LI><S>Imageboard for 420chan.org</S> (<EM>canceled</EM>)<BR>
+  <LI ID="№21"><S>Imageboard for 420chan.org</S> (<EM>canceled</EM>)<BR>
       Awardees: <REDACTED></REDACTED>
   <P CLASS="extended-comment advisory"><SMALL>Fred wasted some of the Foundation's money on this. It was a mistake. The Foundation will not be funding this project any further.
 
@@ -121,10 +121,10 @@ ignored.</P>
       <IMG WIDTH="20%" SRC="./media/ufo.webp" ALT="A UFO abducting the chairman of the MFEK Foundation Inc."></SMALL></P>
   </LI>
   <DIV CLASS="tag-marker"></DIV>
-  <LI><SPAN><A HREF="/misc/four-freedoms-japanese.html">The Four Freedoms of Free Software</A> (フリー・ソフトの四つの自由) manga (<EM>completed</EM>)</SPAN><BR>
+  <LI ID="№22"><SPAN><A HREF="/misc/four-freedoms-japanese.html">The Four Freedoms of Free Software</A> (フリー・ソフトの四つの自由) manga (<EM>completed</EM>)</SPAN><BR>
       <SPAN>Awardee: <RUBY>マアウダアン<RT>maaudaan</RT></RUBY> (@<A HREF="https://twitter.com/maaudaan_tg">maaudaan_tg</A>)</SPAN></LI>
   <DIV CLASS="tag-marker"></DIV>
-  <LI>Port of Inkscape’s measurement tool to MFEKglif (<EM>in progress</EM>)<BR>
+  <LI ID="№23">Port of Inkscape’s measurement tool to MFEKglif (<EM>in progress</EM>)<BR>
       Including also the addition of Tunni lines, curve visualization, and digital callipers<BR>
       Relevant MFEKglif issues: <A HREF="https://github.com/MFEK/glif/issue/18">№18</A>,
       <A HREF="https://github.com/MFEK/glif/issue/19">№19</A>,
@@ -132,7 +132,7 @@ ignored.</P>
       <A HREF="https://github.com/MFEK/glif/issue/142">№142</A>.
       <BR>Awardee: Matthew Blanchard</LI>
   <DIV CLASS="tag-marker TBD"></DIV>
-  <LI>TBD</LI>
+  <LI ID="№24">TBD</LI>
 </OL>
 <H1>Donations</H1>
 <P>Besides its grants, the Foundation also makes charitable contributions to developers with no expectation of tangible return, because it believes the intangible benefits to libre fonts of these donations are worth it.</P>
