--- a/_includes/foundation_index.html
+++ b/_includes/foundation_index.html
@@ -118,13 +118,14 @@ ignored.</P>
   <P CLASS="extended-comment advisory"><SMALL>Fred wasted some of the Foundation's money on this. It was a mistake. The Foundation will not be funding this project any further.
 
       He has been a bad raccoon and is sorry. He was brought upstairs for a firm talking-to.<BR>
-      <IMG WIDTH="40%" SRC="./media/ufo.webp" ALT="A UFO abducting the chairman of the MFEK Foundation Inc."></SMALL></P>
+      <IMG SRCSET="./media/ufo.webp 1x" WIDTH="40%" SRC="./media/ufo.png" ALT="A UFO abducting the chairman of the MFEK Foundation Inc.">
+      </SMALL></P>
   </LI>
   <DIV CLASS="tag-marker"></DIV>
   <LI ID="№22"><SPAN><A HREF="/misc/four-freedoms-japanese.html">The Four Freedoms of Free Software</A> (フリー・ソフトの四つの自由) manga (<EM>completed</EM>)</SPAN><BR>
       <SPAN>Awardee: <RUBY>マアウダアン<RT>maaudaan</RT></RUBY> (@<A HREF="https://twitter.com/maaudaan_tg">maaudaan_tg</A>)</SPAN></LI>
   <DIV CLASS="tag-marker"></DIV>
-  <LI ID="№23">Port of Inkscape’s measurement tool to MFEKglif (<EM>in progress</EM>)<BR>
+  <LI ID="№23"><IMG CLASS="rightfloat" SRC="./media/new.gif">Inkscape’s measurement tool for MFEKglif (<EM>in progress</EM>)<BR>
       Including also the addition of Tunni lines, curve visualization, and digital callipers<BR>
       Relevant MFEKglif issues: <A HREF="https://github.com/MFEK/glif/issue/18">№18</A>,
       <A HREF="https://github.com/MFEK/glif/issue/19">№19</A>,
