Fix location of font CSS

--- a/css/fonts.css
+++ b/css/fonts.css
@@ -23,3 +23,8 @@
   src: 
   url('/blob/fonts/vf/Besley-Italic%5Bwdth,wght%5D.woff2');
 }
+
+@font-face {
+    font-family: "TT2020 Style F";
+    src: url("https://mfek.org/blob/fonts/TT2020StyleF-Regular-ASCII.woff2") format("woff2"),
+}
