fix Japanese font

--- a/_includes/foundation_index.html
+++ b/_includes/foundation_index.html
@@ -122,8 +122,8 @@ ignored.</P>
       </SMALL></P>
   </LI>
   <DIV CLASS="tag-marker"></DIV>
-  <LI ID="№22"><SPAN><A HREF="/misc/four-freedoms-japanese.html">The Four Freedoms of Free Software</A> (フリー・ソフトの四つの自由) manga (<EM>completed</EM>)</SPAN><BR>
-      <SPAN>Awardee: <RUBY>マアウダアン<RT>maaudaan</RT></RUBY> (@<A HREF="https://twitter.com/maaudaan_tg">maaudaan_tg</A>)</SPAN></LI>
+  <LI ID="№22"><SPAN><A HREF="/misc/four-freedoms-japanese.html">The Four Freedoms of Free Software</A> (<SPAN LANG="JA">フリー・ソフトの四つの自由</SPAN>) manga (<EM>completed</EM>)</SPAN><BR>
+      <SPAN>Awardee: <RUBY LANG="JA">マアウダアン<RT>maaudaan</RT></RUBY> (@<A HREF="https://twitter.com/maaudaan_tg">maaudaan_tg</A>)</SPAN></LI>
   <DIV CLASS="tag-marker"></DIV>
   <LI ID="№23"><IMG CLASS="rightfloat" SRC="./media/new.gif">Inkscape’s measurement tool for MFEKglif (<EM>in progress</EM>)<BR>
       Including also the addition of Tunni lines, curve visualization, and digital callipers<BR>
