--- a/foundation/css/default.shim.css
+++ b/foundation/css/default.shim.css
@@ -111,7 +111,7 @@ ol .extended-comment::before {
 }
 REDACTED {
     font-weight: bold;
-    font-family: "TT2020 Style F";
+    font-family: REDACTED;
     font-size: 2em;
     color: maroon;
 }
